--- a/css/styles.css
+++ b/css/styles.css
@@ -1,24 +1,34 @@
 /*Clases se llaman con . ids se llaman con #*/
 /*Reset básico*/
 * {
-    margin: 10px;
-    padding: 0;
+    margin: 1%;
+    padding: 0px;
     box-sizing: border-box;
 }
+
+/*Estido del header*/
 header {
     text-align: center;
 }
 header .logo img {
     display: block;
+    width: 30%;
+    height: auto;
     margin: 0 auto;
 }
 header .logo-nombre h1 {
     text-align: center;
     margin-top: 5px;
 }
-body .col {
-    margin: 10px;
+
+/*Estilo del body*/
+
+.collapsed {
+    background-color: rgb(244, 244, 244);
 }
+
+
+
 /*Estilo de share-your trades con el uso de flex y pseudoclases*/
 .img-share {
     display: flex;
@@ -90,6 +100,13 @@ footer a{
     padding: 20px;
     flex: 1; /*Para que cada enlace ocupe el mismo espacio*/
 }
+.row {
+    margin: 4%;
+}
+.col {
+    margin-right: 4%;
+    margin-left: 4%;
+}
 .col a{
     text-decoration: none;
 }
@@ -117,4 +134,25 @@ footer a{
 .subtitulo {
     text-align: center;
     text-justify: center;
+}
+
+@media screen and (max-width: 240px) {
+    .accordion-button {
+        display: block;
+    }
+    .row {
+        flex-direction: column;
+        margin: 0;
+    }
+    .col {
+        width: 100%;
+        margin: 0;
+    }
+    .grid-container {
+        width: 50%;
+    }
+    .grid-item {
+        width: 50%;
+        font-size: 45%;
+    }
 }
